# ai-chat

./: .gitignore  DEPLOY.md  README.md  design-qa.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
apps/desktop/: package.json
apps/desktop/assets/: icon.icns
apps/desktop/renderer/: app.js  index.html  styles.css
apps/desktop/scripts/: build-mac-icon.mjs
apps/desktop/src/: main.mjs
apps/server/: package-lock.json  package.json  tsconfig.json
apps/server/src/: config.test.ts  config.ts  index.ts  logger.ts
apps/server/src/middleware/: apiKey.ts  rateLimit.ts
apps/server/src/prompt/: builder.ts  context.test.ts  context.ts
apps/server/src/routes/: chat.ts  keys.ts  proactive.ts  stt.test.ts  stt.ts  tts.ts
apps/server/src/services/: localTtsVoices.test.ts  localTtsVoices.ts
apps/server/src/utils/: maskKey.ts  modelProvider.ts  timeout.ts
apps/stt-service/: app.py  pyproject.toml
apps/tts-service/: pyproject.toml
apps/web/: index.html  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.vue  main.ts
apps/web/src/components/: BrandMark.vue  CharacterPanel.vue  ChatInput.vue  MarketingHeader.vue  MessageList.vue  TagsInput.vue  VoiceCallOverlay.vue  VoiceMessage.vue
apps/web/test/: voiceError.test.ts
docs/superpowers/plans/: 2026-07-07-full-chain-optimization.md
docs/superpowers/specs/: 2026-07-07-full-chain-optimization-design.md
docs/versions/v2026-07-07-full-chain-optimization/: 00-版本总览.md  01-BRD.md  02-PRD.md  03-TRD.md  03-开发总览.md  04-测试总览.md  05-产品验收.md  06-上线说明.md
scripts/: dev-all.mjs  dev-all.sh
(+23 files in other folders)
